--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.13.0",
     "daisyui": "^4.10.5",
     "eslint-config-prettier": "^9.1.0",
+    "faker": "^6.6.6",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "prettier": "^3.2.5",
@@ -20,6 +21,7 @@
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.12.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
