--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^4.10.5",
     "eslint-config-prettier": "^9.1.0",
     "faker": "^6.6.6",
+    "jose": "^5.3.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "prettier": "^3.2.5",
