--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cypress": "^13.10.0",
     "eslint-config-prettier": "^9.1.0",
     "next": "13.5.6",
+    "next-auth": "^4.24.7",
     "prettier": "^3.3.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
     "react": "^18",
